<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <!--toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/dark_brown"
        android:title="@string/app_name"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- backgammonImage -->
    <ImageView
        android:id="@+id/backgammonImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/backgammon_image"
        android:scaleType="centerCrop"
        android:src="@drawable/backgammon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <!-- descText -->
    <TextView
        android:id="@+id/descText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/description_text"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="@color/dark_brown"
        app:layout_constraintTop_toBottomOf="@id/backgammonImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- editText1 -->
    <EditText
        android:id="@+id/editText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/player1_hint"
        android:inputType="textPersonName"
        android:autofillHints="name"
        app:layout_constraintTop_toBottomOf="@id/descText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- editText2 -->
    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/player2_hint"
        android:inputType="textPersonName"
        android:autofillHints="name"
        app:layout_constraintTop_toBottomOf="@id/editText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- startGameButton -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/start_button"
        android:textColor="@color/dark_brown"
        android:textStyle="bold"
        android:background="@drawable/button_style"
        app:layout_constraintTop_toBottomOf="@id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- scoreText -->
    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/dark_brown"
        android:textSize="36sp"
        android:textStyle="bold"
        android:text="@string/score_format"
        app:layout_constraintTop_toBottomOf="@id/startGameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- playerButtonsRow -->
    <LinearLayout
        android:id="@+id/buttonsRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/scoreText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_style"
            android:text="@string/player1_wins"
            android:textColor="@color/dark_brown"
            android:textStyle="bold"
            android:enabled="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_style"
            android:text="@string/player2_wins"
            android:textColor="@color/dark_brown"
            android:textStyle="bold"
            android:enabled="false"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
