<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <!-- toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/dark_brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- congratsImage -->
    <ImageView
        android:id="@+id/congratsImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/congrats_image"
        android:scaleType="centerCrop"
        android:src="@drawable/congrats"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- winnerButton -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/winnerButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:text="@string/winner_button"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/congratsImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- WinnerSuffix -->
    <TextView
        android:id="@+id/winnerSuffix"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/winner_suffix"
        android:textColor="@color/dark_brown"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/winnerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ResetGameButton -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetGameButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_style"
        android:text="@string/reset_button"
        android:textColor="@color/dark_brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/winnerSuffix" />
</androidx.constraintlayout.widget.ConstraintLayout>
